--- a/project4/css/layout.css
+++ b/project4/css/layout.css
@@ -87,6 +87,26 @@ a {
 }
 
 
+@media screen and (max-width: 480px) {
+    #container {
+    padding-top: 25px;
+    padding-bottom: 50px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+    
+    .description {
+    margin: auto;
+    padding: 3px 20px 3px 20px;
+    width: 300px;
+    height: auto;
+    text-align: center;
+    border-style:hidden;
+}
+}
 
 
 
