--- a/project4/css/layout2.css
+++ b/project4/css/layout2.css
@@ -24,7 +24,7 @@ h2{
     margin: auto;
     width: 100px;
     height: 30px;
-    text-align: center
+    text-align: center;
     border-color: #eeeeee;
     border-style: solid;
     border-width: thick; 
